--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,4 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-.idea/workspace.xml
-.idea/laravel-plugin.xml
-.idea/workspace.xml
+.idea/
