--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=8889
-DB_DATABASE=codechallenge
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_HOST=remotemysql.com
+DB_PORT=3306
+DB_DATABASE=Hxbs2OWH6i
+DB_USERNAME=Hxbs2OWH6i
+DB_PASSWORD=6GOefH1C09
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
