--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:xPQDZWg9qcHuDz0JI4CWTAEFD955zpeMijZoU2gmgXY=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_KEY=base64:5Hvfi1Ez6Ka7KGDtuZWdej3hMtLbJSSpXBInnyLYi0I=
+APP_KEY=5Hvfi1Ez6Ka7KGDtuZWdej3hMtLbJSSpXBInnyLYi0I=
 
 LOG_CHANNEL=stack
 
